# MuseuPessoa2425

./: EntrevistaCatarina.m4a_transcript.txt  Entrevista_Catarina.md  Motivacao  Motivacao.txt  README.md  Sem_revisão.txt  entrevista_Maria.md
Entrevista_Margarida/: Entrevista_Catarina.md  Olhosnofuturo.md
Trabalho_Final/: a1.txt
Trabalho_Final/Entrevistas_Beatriz/: Entrevista_B1.md  Entrevista_JoãoPedro_semrevisao.txt  README.md
Trabalho_Final/Entrevistas_Beatriz/Entrevista_B1/: Entrevista CarinaFaria_semrevisao.txt  Entrevista_CarinaFaria.md
Trabalho_Final/Entrevistas_Beatriz/Final/: B1_racio.csv  B2_racio.csv  Entrevista_B1-chunks.txt  Entrevista_B1-ent-agr.txt  Entrevista_B1-ent.txt  Entrevista_B1-keywords.txt  Entrevista_B1.conll  Entrevista_B1.md  Entrevista_B1.txt  Entrevista_B1_racio.csv  Entrevista_B2-chunks.txt  Entrevista_B2-ent-agr.txt  Entrevista_B2-ent.txt  Entrevista_B2-keywords.txt  Entrevista_B2.conll  Entrevista_B2.md  Entrevista_B2.txt  Entrevista_B2_racio.csv  Entrevista_freq.txt  Entrevista_linhas_pal.txt  Makefile  Num_linha_pal.py  analise_coesao.py  coesao_B1.txt  coesao_B2.txt  dataset.py  dataset_completo.json  extract_chunks.py  freq_absoluta.py  graf.py  grafico.py  interjeicoes.py  interjeicoes_B1.txt  interjeicoes_B2.txt  jjconll.py  palavras_frequentes.txt  pyproject.toml  sentimento.py  sentimento_B1.txt  sentimento_B2.txt  (+10 more)
Trabalho_Final/Entrevistas_Margarida/: README.md
Trabalho_Final/Entrevistas_Margarida/Entrevistas_A2/: a2.txt
entrevista_Beatriz/: Entrevista_Maria.md  README.md  Sem_revisão.txt  entrevista_Maria.md
(+51 files in other folders)
